# AMM

./: .gitignore  CMakeLists.txt  README.md
amm/: amm.hpp  amm_config.hpp  amm_profile.hpp  macros.hpp
amm/containers/: bitmask.hpp  bytestream.hpp  cache_manager.hpp  ordered_unique.hpp  unordered_map.hpp  unordered_set.hpp  vec.hpp
amm/creator/: creator.hpp  creator_wcdf53.hpp  stencil.hpp  stencil_wcdf53.hpp
amm/precision/: codec.hpp  precision.hpp
amm/tree/: amtree.hpp  block_abstract.hpp  block_precision.hpp  block_umap.hpp  lcode.hpp  node_config.hpp  node_config_core.hpp  node_splitter.hpp  octree_cell_iterators.hpp  octree_utils.hpp  vmanager_abstract.hpp  vmanager_blocks.hpp  vmanager_umap.hpp
amm/types/: byte_traits.hpp  dtypes.hpp  enums.hpp  strformat.hpp
amm/utils/: data_utils.hpp  exceptions.hpp  logger.hpp  mlinear_interpolator.hpp  timer.hpp  utils.hpp
amm/vtk/: vtkAMM.hpp
app/: CMakeLists.txt  amm_handler.hpp  cli.cpp
streams/: data_stream.hpp  enums.hpp  state.hpp  utils.hpp
wavelets/: dtypes.hpp  enums.hpp  utils.cpp  utils.hpp  wavelet.hpp  wavelet_cdf53.hpp
